--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ script:
   -echo "test same"
   -./test_test2.sh
   -./test_test3.sh
-  -./test_test4.sh
+  -./test_test4.s
+  -echo "kadai2 start"
+  -./kadai2.sh
