--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ script:
   -./test_test4.s
   -echo "kadai2 start"
   -./test_kadai2.sh
-  -bash -e ./kadai3.sh
+  -bash ./kadai3.sh
+  -bash ./test_kadai3.sh
